fix z-index in language

--- a/Front-end/src/app/Header/language-btn/language-btn.component.css
+++ b/Front-end/src/app/Header/language-btn/language-btn.component.css
@@ -33,6 +33,7 @@
     border-radius: 5px;
     padding: 6px 0px;
     position: absolute;
+    z-index: 3;
     top: 26px;
 }
 .mini-window-language a {
